namespace Raitichan.Script.Util.Enum {
	public enum BuiltInAvatarParameter {
		IsLocal,
		Viseme,
		Voice,
		GestureLeft,
		GestureRight,
		GestureLeftWeight,
		GestureRightWeight,
		AngularY,
		VelocityX,
		VelocityY,
		VelocityZ,
		Upright,
		Grounded,
		Seated,
		AFK,
		TrackingType,
		VRMode,
		MuteSelf,
		InStation,
		Supine,
		GroundProximity
	}
}